[gd_scene load_steps=3 format=3 uid="uid://dpwl7gtywvg3i"]

[ext_resource type="Script" path="res://scenes/target_node_text.gd" id="1_b16yr"]

[sub_resource type="SphereShape3D" id="SphereShape3D_3153k"]
radius = 0.2

[node name="TargetNodeText" type="Area3D"]
collision_layer = 32768
collision_mask = 32768
script = ExtResource("1_b16yr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_3153k")

[node name="Label3D" type="Label3D" parent="."]
billboard = 1
no_depth_test = true
text = "###"
font_size = 64
outline_size = 32

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
